@@ -1,11 +1,11 @@
-// Copyright (c) 2013-2014 Josh Blum
+// Copyright (c) 2013-2015 Josh Blum
 // SPDX-License-Identifier: BSL-1.0
 
 #include <Pothos/Object/Serialize.hpp>
 #include <Pothos/Object/Exception.hpp>
 
-#include <Pothos/archive/polymorphic_binary_oarchive.hpp>
-#include <Pothos/archive/polymorphic_binary_iarchive.hpp>
+#include <Pothos/archive/polymorphic_text_oarchive.hpp>
+#include <Pothos/archive/polymorphic_text_iarchive.hpp>
 
 #include <cassert>
 
@@ -13,7 +13,7 @@ std::ostream &Pothos::Object::serialize(std::ostream &os) const
 {
     try
     {
-        Pothos::archive::polymorphic_binary_oarchive oa(os);
+        Pothos::archive::polymorphic_text_oarchive oa(os);
         oa << *this;
     }
     catch(const Pothos::archive::archive_exception &ex)
@@ -30,7 +30,7 @@ std::istream &Pothos::Object::deserialize(std::istream &is)
 
     try
     {
-        Pothos::archive::polymorphic_binary_iarchive ia(is);
+        Pothos::archive::polymorphic_text_iarchive ia(is);
         ia >> *this;
     }
     catch(const Pothos::archive::archive_exception &ex)
